--- a/src/cinetudoproject/MainFXML.fxml
+++ b/src/cinetudoproject/MainFXML.fxml
@@ -8,10 +8,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="cinetudoproject.MainFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.MainFXMLController">
    <children>
       <JFXToolbar layoutY="-4.0" maxWidth="1.7976931348623157E308" prefHeight="78.0" prefWidth="601.0" style="-fx-background-color: #000;" />
       <Text layoutX="252.0" layoutY="217.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tela Principal" />
+      <JFXButton fx:id="cadastrarFun" layoutX="20.0" layoutY="87.0" onAction="#cadastrarFuncionario" text="Cadastrar Funcionario" />
    </children>
 </AnchorPane>
