--- a/src/cinetudoproject/CadastroFilme.fxml
+++ b/src/cinetudoproject/CadastroFilme.fxml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.validation.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXToolbar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="708.0" prefWidth="1104.0" style="-fx-background-color: #FAFAFA;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.CadastroFilmeController">
+<AnchorPane id="AnchorPane" prefHeight="708.0" prefWidth="1104.0" style="-fx-background-color: #FAFAFA;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.CadastroFilmeController">
       <children>
       <!--Imagem Sombra Lateral-->
       <ImageView fitHeight="691.0" fitWidth="38.0" layoutX="437.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
@@ -55,9 +56,6 @@
             <Font name="Droid Sans Georgian" size="15.0" />
          </font>
       </JFXButton>
-      
-      <Text fill="#c6c1c1" layoutX="734.0" layoutY="643.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Desenvolvido por Space Rocket" />
-      <Text fill="#c6c1c1" layoutX="713.0" layoutY="660.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" © Todos os direitos reservados 2016" />
       <JFXTextField fx:id="tituloFilme" focusColor="#ff4537" layoutX="512.0" layoutY="214.0" maxWidth="550.0" minWidth="418.0" prefHeight="38.0" prefWidth="550.0" promptText="Titulo do Filme">
          <font>
             <Font size="17.0" />
