--- a/src/cinetudoproject/view/CadastroFilme.fxml
+++ b/src/cinetudoproject/view/CadastroFilme.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
@@ -12,12 +17,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="708.0" prefWidth="1104.0" style="-fx-background-color: #FAFAFA;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.CadastroFilmeController">
+<AnchorPane id="AnchorPane" prefHeight="708.0" prefWidth="1104.0" style="-fx-background-color: #FAFAFA;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.CadastroFilmeController">
       <children>
       <!--Imagem Sombra Lateral-->
       <ImageView fitHeight="691.0" fitWidth="38.0" layoutX="437.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../img/sombra.png" />
+            <Image url="@../../img/sombra.png" />
          </image>
       </ImageView>
       <!--Imagem do Filme-->
@@ -25,7 +30,7 @@
          <children>
          <ImageView id="bigImage" fx:id="bigImage" fitHeight="661.0" fitWidth="444.0" layoutX="-2.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@../img/choose_image.png" />
+               <Image url="@../../img/choose_image.png" />
             </image>
          </ImageView>
          </children>
@@ -47,7 +52,7 @@
       <!--Imagem Logo do Cinema-->
       <ImageView fitHeight="112.0" fitWidth="254.0" layoutX="826.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
         <image>
-          <Image url="@../img/logocinetudo.png" />
+          <Image url="@../../img/logonov.png" />
         </image>
       </ImageView>
       
