--- a/src/cinetudoproject/view/CadastroFuncionario.fxml
+++ b/src/cinetudoproject/view/CadastroFuncionario.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="708.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.CadastroFuncionarioController">
+<AnchorPane id="AnchorPane" prefHeight="708.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.CadastroFuncionarioController">
     <children>
       <StackPane layoutX="-1.0" layoutY="-4.0" prefHeight="224.0" prefWidth="1104.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-4.0">
          <children>
