--- a/src/cinetudoproject/view/LoginFXML.fxml
+++ b/src/cinetudoproject/view/LoginFXML.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
@@ -14,32 +9,32 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: #000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.LoginFXMLController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="587.0" prefWidth="767.0" style="-fx-background-color: #000;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.LoginFXMLController">
     <children>
-      <JFXTextField fx:id="tv_name" focusColor="#ff4537" layoutX="146.0" layoutY="169.0" maxWidth="489.0" minWidth="309.0" prefHeight="55.0" prefWidth="309.0" promptText="Usuário" unFocusColor="#656363">
+      <JFXTextField fx:id="tv_name" focusColor="#ff4537" layoutX="233.0" layoutY="227.0" maxWidth="489.0" minWidth="309.0" prefHeight="55.0" prefWidth="309.0" promptText="Usuário" unFocusColor="WHITE">
          <font>
             <Font size="16.0" />
          </font>
       </JFXTextField>
-      <JFXPasswordField fx:id="tv_password" focusColor="#f44336" layoutX="150.0" layoutY="240.0" maxWidth="489.0" minWidth="290.0" prefHeight="55.0" prefWidth="309.0" promptText="Senha" unFocusColor="#403d3d">
+      <JFXPasswordField fx:id="tv_password" focusColor="#f44336" layoutX="237.0" layoutY="298.0" maxWidth="489.0" minWidth="290.0" prefHeight="55.0" prefWidth="309.0" promptText="Senha" unFocusColor="WHITE">
          <font>
             <Font size="16.0" />
          </font>
       </JFXPasswordField>
-      <JFXButton fx:id="btn_login" buttonType="RAISED" layoutX="161.0" layoutY="313.0" onAction="#login" prefHeight="45.0" prefWidth="286.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="Entrar" textFill="WHITE">
+      <JFXButton fx:id="btn_login" buttonType="RAISED" layoutX="248.0" layoutY="371.0" onAction="#login" prefHeight="45.0" prefWidth="286.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="Entrar" textFill="WHITE">
          <font>
             <Font name="Droid Sans Georgian" size="16.0" />
          </font></JFXButton>
-      <Text fill="#a89797" layoutX="218.0" layoutY="445.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Desenvolvido por Space Rocket">
+      <Text fill="#a89797" layoutX="305.0" layoutY="503.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Desenvolvido por Space Rocket">
          <font>
             <Font size="11.0" />
          </font></Text>
-      <Text fill="#a89797" layoutX="196.0" layoutY="469.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" © Todos os direitos reservados 2016">
+      <Text fill="#a89797" layoutX="284.0" layoutY="471.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" © Todos os direitos reservados 2016">
          <font>
             <Font size="11.0" />
          </font></Text>
       <Text fx:id="text_erro" fill="WHITE" layoutX="217.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Preencha todos os campos" visible="false" />
-      <ImageView fitHeight="83.0" fitWidth="188.0" layoutX="206.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="83.0" fitWidth="188.0" layoutX="293.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../img/logonov.png" />
          </image>
