--- a/src/cinetudoproject/view/CadastroFuncionario.fxml
+++ b/src/cinetudoproject/view/CadastroFuncionario.fxml
@@ -10,70 +10,46 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="708.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.CadastroFuncionarioController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="655.0" prefWidth="1000.0" style="-fx-background-color: #202020;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.CadastroFuncionarioController">
     <children>
-      <StackPane layoutX="-1.0" layoutY="-4.0" prefHeight="224.0" prefWidth="1104.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-4.0">
-         <children>
-              <ImageView fitHeight="107.0" fitWidth="195.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                      <Image url="@../../img/logonov.png" />
-                  </image>
-              </ImageView>
-         </children>
-      </StackPane>
-      <StackPane layoutX="2.0" layoutY="285.0" prefHeight="46.0" prefWidth="557.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="559.0">
-         <children>
-           <JFXTextField fx:id="tf_name" focusColor="#ff4537" maxWidth="489.0" minWidth="489.0" prefHeight="27.0" prefWidth="489.0" promptText="Nome">
-               <font>
-                   <Font size="20.0" />
-               </font>
-           </JFXTextField>
-         </children>
-      </StackPane>
-      <StackPane layoutX="8.0" layoutY="331.0" prefHeight="46.0" prefWidth="542.0">
-         <children>
-            <JFXTextField fx:id="tf_cpf" focusColor="#ff4537" maxWidth="489.0" minWidth="489.0" prefHeight="27.0" prefWidth="489.0" promptText="CPF">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </JFXTextField>
-         </children>
-      </StackPane>
-      <StackPane layoutX="3.0" layoutY="375.0" prefHeight="46.0" prefWidth="557.0">
-         <children>
-            <JFXTextField fx:id="tf_email" focusColor="#ff4537" maxWidth="489.0" minWidth="489.0" prefHeight="27.0" prefWidth="489.0" promptText="Email">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </JFXTextField>
-         </children>
-      </StackPane>
-      <StackPane layoutX="561.0" layoutY="285.0" prefHeight="46.0" prefWidth="557.0">
-         <children>
-            <JFXTextField fx:id="tf_user" focusColor="#ff4537" maxWidth="489.0" minWidth="489.0" prefHeight="27.0" prefWidth="489.0" promptText="Usuário">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </JFXTextField>
-         </children>
-      </StackPane>
-      <StackPane layoutX="560.0" layoutY="331.0" prefHeight="46.0" prefWidth="557.0" AnchorPane.leftAnchor="560.0" AnchorPane.rightAnchor="1.0">
-         <children>
-            <JFXPasswordField fx:id="tf_pass" focusColor="#ff4537" maxWidth="489.0" minWidth="403.0" prefHeight="44.0" prefWidth="403.0" promptText="Senha">
-                <font>
-                    <Font size="20.0" />
-                </font>
-            </JFXPasswordField>
-         </children>
-      </StackPane>
-      <StackPane fx:id="paneCadastro" layoutX="2.0" layoutY="490.0" prefHeight="46.0" prefWidth="1112.0">
-         <children>
-             <JFXButton fx:id="btn_cadastron" buttonType="RAISED" layoutX="329.0" layoutY="487.0" onAction="#cadastro" prefHeight="45.0" prefWidth="460.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="CADASTRAR" textFill="WHITE">
-               <font>
-                 <Font name="Droid Sans Georgian" size="20.0" />
-               </font>
-             </JFXButton>
-         </children>
-      </StackPane>     
+      <JFXToolbar prefHeight="77.0" prefWidth="1000.0" style="-fx-background-color: #FFF;">
+         <center>
+            <ImageView fitHeight="47.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" translateY="5.0" BorderPane.alignment="CENTER">
+               <image>
+                  <Image url="@../../img/logonov.png" />
+               </image>
+            </ImageView>
+         </center>
+      </JFXToolbar>
+      <JFXTextField id="tf_name" fx:id="tf_name" focusColor="#ff4537" layoutX="14.0" layoutY="179.0" maxWidth="550.0" minWidth="418.0" prefHeight="38.0" prefWidth="471.0" promptText="Nome">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField id="tf_cpf" fx:id="tf_cpf" focusColor="#ff4537" layoutX="14.0" layoutY="232.0" maxWidth="550.0" minWidth="418.0" prefHeight="38.0" prefWidth="471.0" promptText="CPF">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField id="tf_email" fx:id="tf_email" focusColor="#ff4537" layoutX="14.0" layoutY="285.0" maxWidth="550.0" minWidth="418.0" prefHeight="38.0" prefWidth="471.0" promptText="Email">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField id="tf_user" fx:id="tf_user" focusColor="#ff4537" layoutX="515.0" layoutY="179.0" maxWidth="550.0" minWidth="418.0" prefHeight="38.0" prefWidth="471.0" promptText="Usuário">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </JFXTextField>
+      <JFXPasswordField id="tf_pass" fx:id="tf_pass" focusColor="#ff4537" layoutX="515.0" layoutY="232.0" maxWidth="471.0" minWidth="171.0" prefHeight="38.0" prefWidth="471.0" promptText="Senha">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </JFXPasswordField>
+      <JFXButton id="saveButton" fx:id="saveButton" buttonType="RAISED" layoutX="232.0" layoutY="429.0" onAction="#cadastro" prefHeight="38.0" prefWidth="536.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="SALVAR" textFill="WHITE">
+         <font>
+            <Font name="Droid Sans Georgian" size="15.0" />
+         </font>
+      </JFXButton> 
     </children>
 </AnchorPane>
