--- a/src/cinetudoproject/view/MainGerente.fxml
+++ b/src/cinetudoproject/view/MainGerente.fxml
@@ -14,33 +14,27 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.MainGerenteController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="1000.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.MainGerenteController">
    <children>
-      <BorderPane prefHeight="800.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <left>
-            <JFXButton fx:id="cadastrarFun" onAction="#cadastrarFuncionario" text="Cadastrar Funcionario" translateX="15.0" translateY="-300.0" BorderPane.alignment="CENTER" />
-         </left>
-         <top>
-            <JFXToolbar prefHeight="77.0" prefWidth="1000.0" style="-fx-background-color: #000;" BorderPane.alignment="CENTER">
-               <center>
-                  <ImageView fitHeight="47.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" translateY="5.0" BorderPane.alignment="CENTER">
-                     <image>
-                        <Image url="@../../img/logonov.png" />
-                     </image>
-                  </ImageView>
-               </center>
-               <right>
-                  <Text fx:id="usernameLabel" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="username" translateX="-50.0" wrappingWidth="91.2734375" BorderPane.alignment="CENTER">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-               </right>
-            </JFXToolbar>
-         </top>
+      <JFXToolbar prefHeight="77.0" prefWidth="1000.0" style="-fx-background-color: #FFF;">
          <center>
-            <JFXButton fx:id="cadastrarFilme" onAction="#cadastrarFilme" text="Cadastrar Filme" BorderPane.alignment="CENTER" />
+            <ImageView fitHeight="47.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" translateY="5.0" BorderPane.alignment="CENTER">
+               <image>
+                  <Image url="@../../img/logonov.png" />
+               </image>
+            </ImageView>
          </center>
-      </BorderPane>
+         <right>
+            <Text fx:id="usernameLabel" fill="#171717" strokeType="OUTSIDE" strokeWidth="0.0" text="username" translateX="-50.0" wrappingWidth="91.2734375" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+         </right>
+         <left>
+            <JFXHamburger fx:id="hamburguer" style="-fx-border-style: #FF;" translateX="20.0" BorderPane.alignment="CENTER" />
+         </left>
+      </JFXToolbar>
+      <JFXDrawer fx:id="drawer" defaultDrawerSize="200.0" layoutY="77.0" prefHeight="552.0" prefWidth="255.0" />
    </children>
 </AnchorPane>
