--- a/src/cinetudoproject/view/SidePanelContent.fxml
+++ b/src/cinetudoproject/view/SidePanelContent.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="723.0" prefWidth="178.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.SidePanelContentController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="723.0" prefWidth="68.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.SidePanelContentController">
    <children>
       <ImageView fitHeight="127.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
          <image>
